tweak to description

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: jamactions
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Figuring out Github Actions
 Version: 0.1.0
 Author: Who wrote it
 Maintainer: The package maintainer <yourself@somewhere.net>
