fixing windows version

--- a/.github/workflows/r-cmd-check.yaml
+++ b/.github/workflows/r-cmd-check.yaml
@@ -18,7 +18,7 @@ jobs:
       matrix:
         config:
           - {os: ubuntu-latest, r: '3.6.3'}
-          - {os: windows, r: '3.6.3'}
+          - {os: windows-latest, r: '3.6.3'}
 
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
