adding other R versions

--- a/.github/workflows/r-cmd-check.yaml
+++ b/.github/workflows/r-cmd-check.yaml
@@ -18,7 +18,9 @@ jobs:
       matrix:
         config:
           - {os: ubuntu-latest, r: '3.6.3'}
+          - {os: ubuntu-latest, r: 'latest'}
           - {os: windows-latest, r: '3.6.3'}
+          - {os: windows-latest, r: 'latest'}
 
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
