--- a/.github/workflows/r-cmd-check.yaml
+++ b/.github/workflows/r-cmd-check.yaml
@@ -4,7 +4,9 @@ on:
   pull_request:
     branches: [main, master]
 
+
 name: R-CMD-Check
+
 
 jobs:
   R-CMD-Chek:
@@ -22,30 +24,41 @@ jobs:
           - {os: windows-latest, r: '3.6.3'}
           - {os: windows-latest, r: 'latest'}
 
+
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
     steps:
-      - uses: actions/checkout@v2
+      - name: Check out Github repo
+        uses: actions/checkout@v2
 
-      - uses: r-lib/actions/setup-pandoc@v2
 
-      - name: Install libcurl on Linux
+      - name: Install Pandoc
+        uses: r-lib/actions/setup-pandoc@v2
+
+
+      - name: Install Linux Dependencies
         if: runner.os == 'Linux'
         run: sudo apt-get update -y && sudo apt-get install -y libcurl4-openssl-dev
 
-      - uses: r-lib/actions/setup-r@v2
+
+      - name: Install R
+        uses: r-lib/actions/setup-r@v2
         with:
           r-version: ${{ matrix.config.r }}
           use-public-rspm: true
 
-      - uses: r-lib/actions/setup-renv@v2
+
+      - name: renv install and restore with cache
+        uses: r-lib/actions/setup-renv@v2
+
 
       - name: Install R CMD check
         run: install.packages("rcmdcheck")
         shell: Rscript {0}
 
 
-      - uses: r-lib/actions/check-r-package@v2
+      - name: Check R Package
+        uses: r-lib/actions/check-r-package@v2
         with:
           args: 'c("--no-manual", "--as-cran", "--no-multiarch")'
           error-on: '"error"'
