--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,8 +4,7 @@ Title: Figuring out Github Actions
 Version: 0.1.0
 Author: Who wrote it
 Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
+Description: A package to test Github Actions.
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
