--- a/.github/workflows/deps_r-cmd-check.yaml
+++ b/.github/workflows/deps_r-cmd-check.yaml
@@ -5,7 +5,7 @@ on:
     branches: [main, master]
 
 
-name: R-CMD-Check
+name: Deps - R-CMD-Check
 
 
 jobs:
@@ -40,7 +40,11 @@ jobs:
 
       - name: Install Linux Dependencies
         if: runner.os == 'Linux'
-        run: sudo apt-get update -y && sudo apt-get install -y libcurl4-openssl-dev
+        run: |
+          sudo apt-get update -y \
+          sudo apt-get install -y
+          libcurl4-openssl-dev \
+          cmake
 
 
       - name: Install R
@@ -50,7 +54,8 @@ jobs:
           use-public-rspm: true
 
 
-      - uses: r-lib/actions/setup-r-dependencies@v2
+      - name: Install R dependencies
+        uses: r-lib/actions/setup-r-dependencies@v2
         with:
           extra-packages: any::rcmdcheck
           needs: check
