--- a/.github/workflows/renv_r-cmd-check.yaml
+++ b/.github/workflows/renv_r-cmd-check.yaml
@@ -5,7 +5,7 @@ on:
     branches: [main, master]
 
 
-name: R-CMD-Check
+name: Renv - R-CMD-Check
 
 
 jobs:
@@ -40,7 +40,11 @@ jobs:
 
       - name: Install Linux Dependencies
         if: runner.os == 'Linux'
-        run: sudo apt-get update -y && sudo apt-get install -y libcurl4-openssl-dev
+        run: |
+          sudo apt-get update -y \
+          sudo apt-get install -y
+          libcurl4-openssl-dev \
+          cmake
 
 
       - name: Install R
