--- a/.github/workflows/renv_r-cmd-check.yaml
+++ b/.github/workflows/renv_r-cmd-check.yaml
@@ -42,7 +42,7 @@ jobs:
         if: runner.os == 'Linux'
         run: |
           sudo apt-get update -y \
-          sudo apt-get install -y
+          sudo apt-get install -y \
           libcurl4-openssl-dev \
           cmake
 
